// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action runAction push to production or staging env/prod Existing tag (changed tree) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
]
`;

exports[`action runAction push to production or staging env/prod Existing tag (current commit) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
  Array [
    "##[info] The tag is for the current commit, okay to continue",
  ],
]
`;

exports[`action runAction push to production or staging env/prod Existing tag (different commit, matching tree) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
  Array [
    "##[info] The current tree matches the existing tag, okay to continue",
  ],
]
`;

exports[`action runAction push to production or staging env/prod Non-Existant Tag 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/staging Existing tag (changed tree) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
]
`;

exports[`action runAction push to production or staging env/staging Existing tag (current commit) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
  Array [
    "##[info] The tag is for the current commit, okay to continue",
  ],
]
`;

exports[`action runAction push to production or staging env/staging Existing tag (different commit, matching tree) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
  Array [
    "##[info] The current tree matches the existing tag, okay to continue",
  ],
]
`;

exports[`action runAction push to production or staging env/staging Non-Existant Tag 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
]
`;
